第一次测试成功

--- a/BaiDuOCR/appsettings.json
+++ b/BaiDuOCR/appsettings.json
@@ -30,6 +30,6 @@
       "UserName": "pos",
       "PassWord": "8888"
     },
-    "FileUploadUrl": "http://10.0.8.6:1848"
+    "FileUploadUrl": "http://10.0.8.6:1848/api/file/UploadFile"
   }
 }
