MQ 改为可配置

--- a/BaiDuOCR/appsettings.json
+++ b/BaiDuOCR/appsettings.json
@@ -30,6 +30,14 @@
       "UserName": "pos",
       "PassWord": "8888"
     },
-    "FileUploadUrl": "http://10.0.8.6:1848/api/file/UploadFile"
+    //文件服务接口
+    "FileUploadUrl": "http://10.0.8.6:1848/api/file/UploadFile",
+    //Mq配置
+    "RabbitMqConfig": {
+      "HostName": "10.0.8.10",
+      "Port": "5672",
+      "UserName": "yogya",
+      "Password": "123123"
+    }
   }
 }
