缓存时长更改为可配置

--- a/BaiDuOCR/appsettings.json
+++ b/BaiDuOCR/appsettings.json
@@ -38,6 +38,15 @@
       "Port": "5672",
       "UserName": "yogya",
       "Password": "123123"
+    },
+    //缓存有效时长
+    "CacheExpiration": {
+      "AllMallOCRRule": 1, //所有Mall的OCR规则
+      "AllStoreOCRDetailRuleList": 0.5, //所有商铺明细规则
+      "StoreOCR": 0.5, //单个商铺规则
+      "Store": 1, //单个Store
+      "Company": 24, //所有公司
+      "OrgInfo": 24 //所有组织
     }
   }
 }
