--- a/BaiDuOCR/BaiDuOCR.csproj
+++ b/BaiDuOCR/BaiDuOCR.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>E:\Vincent\Git储存库\BaiDuORC\BaiDuOCR\BaiDuOCR.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="File\UploadImage\" />
     <Folder Include="wwwroot\" />
