--- a/BaiDuOCR/appsettings.json
+++ b/BaiDuOCR/appsettings.json
@@ -31,10 +31,10 @@
       "PassWord": "8888"
     },
     //文件服务接口
-    "FileUploadUrl": "http://10.0.8.6:1848/api/file/UploadFile",
+    "FileUploadUrl": "http://server6.office.asiatic.cc:1848/api/file/UploadFile",
     //Mq配置
     "RabbitMqConfig": {
-      "HostName": "10.0.8.10",
+      "HostName": "server10.office.asiatic.cc",
       "Port": "5672",
       "UserName": "yogya",
       "Password": "123123"
